bus Mall is ready

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <main>
         <div id="result">
-            <ul>
+            <h3>Result</h3>
+            <ul id ="unList">
 
             </ul>
         </div>
