--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="https://i.pinimg.com/originals/f6/cc/e0/f6cce07ca31a553a2a27938fdfcd8db3.png" alt="">
+        <img src="https://media4.giphy.com/media/7IGKpmPxzeYNqEsvxp/giphy.webp" alt="">
         <h1 class = "mainHeader">Bus Mall</h1>
     </header>
 
@@ -29,12 +29,17 @@
             <img src="" id="middleImage">
             <img src="" id="rightImage">
         </div>
+
+        <div id="chart">
+            <canvas id="myChart"></canvas>
+        </div>
+
+        
     </main>
 
     <footer>
-
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="js/app.js"></script>
     
 </body>
