add result button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     </header>
 
     <main>
+
+        
         <div id="result">
-            <h3>Result</h3>
+            <input id = "resultBtn" type="button" value="Show Result">
+            <h3 style="text-align: left;">Result</h3>
             <ul id ="unList">
 
             </ul>
